# vehicle-spy

./: .axxtermcolors  .clangd  .gitignore  .gitmodules  Brewfile  CMakeLists.txt  HANDOFF_PROMPT.md  MVP_VERIFICATION.md  Makefile  README.md  TEAM_GUIDELINES.md  TODO.md  TODO_coverage_local_live_drift.md  TODO_sonar_zero_refactor.md  TODO_vspy_coverage_hygiene.md  TODO_vspy_coverage_instrumentation.md  TODO_vspy_coverage_tests.md  TODO_vspy_fast_tests.md  TODO_vspy_posix_socket_tests.md  TODO_vspy_s107.md  build  coverage-manifest.toml  default.profraw  sonar-cfamily-reproducer.tar.xz  sonar-project-esp32.properties  sonar-project-ios.properties  sonar-project.properties  sonar-zero-esp32-s995-s5213-alternatives.md  sonar-zero-report.md  sonar-zero-research-alternatives.md  sonar-zero-s8379-analysis.md  sonar-zero-second-opinion.md  sonar-zero-shape-dbcfileparser-3rdopinion.md  sonar-zero-shape-dbcfileparser-primary-addendum.md  sonar-zero-shape-dbcfileparser-primary.md  sonar-zero-shape-dbcsignalmapper.md  sonar-zero-shape-elm327-3rdopinion.md  sonar-zero-shape-elm327-primary.md  sonar-zero-shape-esp32-s5421.md  sonar-zero-shape-godclass-and-srp.md  (+2 more)
build-ios/: CTestTestfile.cmake
dbc/: Model3CAN.dbc
docs/: BACKLOG.md  MILESTONES.md  PRODUCT_VISION.md  adding-a-vehicle.md  architecture.md  audi-etron-can-notes.md  components.md  hardware-adapter-guide.md  refactoring-opportunities.md  tesla-model3-can-reference.md
firmware/: CMakeLists.txt  test_simple.cpp
firmware/can-bridge/: ArduinoCrypto.h  ArduinoHttpServer.h  ArduinoHttpUpdateServer.h  ArduinoPartition.h  ArduinoPreferences.cpp  ArduinoPreferences.h  ArduinoSntp.h  ArduinoTcpServer.h  ArduinoTcpServerClient.h  ArduinoTime.h  ArduinoTimeNtp.h  ArduinoUdp.h  ArduinoUpdate.h  ArduinoWiFi.cpp  ArduinoWiFi.h  AtCommandDispatcher.cpp  AtCommandDispatcher.h  CanBridge.cpp  CanBridge.h  DiscoveryManager.cpp  DiscoveryManager.h  FirmwareApp.cpp  FirmwareApp.h  HardwareStatusLEDOutput.cpp  HardwareStatusLEDOutput.h  IStatusLEDOutput.h  ITcpServer.h  NtpTimeSync.cpp  NtpTimeSync.h  OtaPublicKey.h  OtaUpdateServer.cpp  OtaUpdateServer.h  StatusLED.cpp  StatusLED.h  StatusLEDRenderer.cpp  StatusLEDRenderer.h  TcpServerManager.cpp  TcpServerManager.h  WiFiManager.cpp  WiFiManager.h  (+3 more)
firmware/mocks/: ArduinoMock.cpp  ArduinoMock.h  ESPMock.cpp  ESPMock.h  PreferencesMock.cpp  PreferencesMock.h  SerialMock.cpp  SerialMock.h  TWAIMock.cpp  TWAIMock.h  WiFiMock.cpp  WiFiMock.h
firmware/tests/: AtCommandDispatcher_test.cpp  CanBridge_test.cpp  DiscoveryManager_test.cpp  FirmwareApp_characterization_test.cpp  FirmwareApp_test.cpp  FirmwareApp_test_fixture.h  NtpTimeSync_test.cpp  OtaUpdateServer_test.cpp  StatusLEDRenderer_test.cpp  StatusLED_test.cpp  TcpServerManager_test.cpp  WiFiManager_test.cpp  test_main.cpp
firmware/vanilla/: ArduinoPreferences.h  ArduinoTime.h  ArduinoUdp.h  ArduinoWiFi.cpp  ArduinoWiFi.h  AtCommandDispatcher.cpp  AtCommandDispatcher.h  CanBridge.cpp  CanBridge.h  DiscoveryManager.cpp  DiscoveryManager.h  FirmwareApp.cpp  FirmwareApp.h  IStatusLEDOutput.h  ITcpServer.h  NtpTimeSync.cpp  NtpTimeSync.h  OtaUpdateServer.cpp  OtaUpdateServer.h  StatusLEDRenderer.cpp  StatusLEDRenderer.h  TcpServerManager.cpp  TcpServerManager.h  WiFiManager.cpp  WiFiManager.h  WiFiReasonCodes.h
scripts/: COVERAGE_MM_POLICY.md  build_summary.py  coverage_block.py  coverage_scorecard.py  gen_coverage_config.py  lcov_add_uninstrumented.py  lcov_to_xml.py  manifest_query.py  merge_compile_commands.py  ota-flash.sh  ota-generate-keys.sh  ota-push.py  ota-sign.sh  run_coverage_tests.sh  serial-startup-log.pl  (+5 more)
test/: CMakeLists.txt  VehicleSimulator.test.cpp  test_example.cpp  test_main.cpp
test/ble/: BLEManager.test.cpp
test/boundary/: AutoDetectionFlow.test.cpp  ELM327Protocol.test.cpp  ELM327Transport.test.cpp  OBD2EndToEnd.test.cpp  OBD2Transport.test.cpp  TeslaBLETransport.test.cpp  VehicleDetectorIntegration.test.cpp
test/cli/: CliOptions.test.cpp  Orchestration.test.cpp  TelemetryRunner.test.cpp
test/discovery/: DiscoveryPacket.test.cpp  DiscoveryVerifier.test.cpp
test/domain/: AudiMLBTranslator.test.cpp  AudiSignalTranslator.test.cpp  BLESignalSource.test.cpp  CANDecoder.test.cpp  CANSignalDecoderBase.test.cpp  CANSignalDecoderShared.test.cpp  CANTranslatorBase.test.cpp  CaptureLog.test.cpp  DBCFileParser.test.cpp  DBCParser.test.cpp  DBCSignalMapperContract.test.cpp  DBCSignalTranslator.test.cpp  DBCTranslationService.test.cpp  DefaultVehicleConfigs.test.cpp  DemoSignalProvider.test.cpp  DemoSignalSource.test.cpp  EventDispatcher.test.cpp  ISignalTranslator.test.cpp  MockSignalSource.h  OBD2SignalTranslator.test.cpp  SignalSourceFactory.test.cpp  SignalTranslatorFactory.test.cpp  TelemetrySignal.test.cpp  TeslaCANTranslator.test.cpp  TeslaSignalParser.test.cpp  VehicleConfigResolver.test.cpp  VehicleDetector.test.cpp  VehicleSignal.test.cpp  VehicleSignalEV.test.cpp  VehicleSignalFactory.test.cpp
test/firmware/: AtCommandDispatcher.test.cpp  DiscoveryManager.test.cpp  FirmwareApp.test.cpp  StatusLED.test.cpp  WiFiManager.test.cpp  WiFiManagerBehavior.test.cpp  WiFiManagerWiring.test.cpp
test/integration/: AudiOBD2LiveDecoding.test.cpp  DBCLiveDecoding.test.cpp  DBCPipelineIntegration.test.cpp  EventDispatcherIntegration.test.cpp  FrameReplay.test.cpp  Makefile  TeslaCANLiveDecoding.test.cpp
test/pipeline/: CaptureNormaliser.test.cpp  ConsoleProgressReporter.test.cpp  DemoTransport.test.cpp  Elm327Normaliser.test.cpp  FileTransport.test.cpp  OTAHttpTransport.test.cpp  PipelineFactory.test.cpp  PipelineReplay.test.cpp  PosixSocket.test.cpp  RawFrameNormaliser.test.cpp  SecureTcpTransport.test.cpp  Sinks.test.cpp  TCPTransport.test.cpp  TCPTransportHeloParse.test.cpp  TCPTransportHunting.test.cpp  TCPTransportHuntingCancel.test.cpp  TCPTransportHuntingGap.test.cpp  USBTransport.test.cpp
test/presentation/: TelemetryFormatter.test.cpp  VehicleSignalFormatter.test.cpp
test/telemetry/: TraceLogger.test.cpp
test/unit/: Makefile
test/util/: IClock.test.cpp
test/vehicle-sim/pipeline/: FakeSocket.h
(+224 files in other folders)
